# snippets-and-notes

./: .gitignore  README.md
ansible/: README.md  mysql-inventory.py  mysql.py
ansible-2.0/: README.md
ansible-2.0/ansible-ci/: ci_ansible_interface.rb
ansible-2.0/ansible-deploy/: hosts  site_full.yml
ansible-2.0/vagrant/: Vagrantfile
ansible-puppet/: site.yml
ansible/ansible-ci/: site.yml
ansible/ansible-deploy/: site.yml
ansible/ansible-puppet/: hosts
ansible/ansible-puppet-role/: .gitignore  .travis.yml  CHANGELOG.md  README.md  molecule.yml  playbook.yml
ansible/dynamic-inventory/: mysql.py
ansible/notes/: apache.yml  dummy0.yml  fubar_module.py  logging.yaml  mail_handlers.yml  mail_tasks.yml  mail_vars.yml  monitor.j2  monitor.yml  n00b_playbook.yml  ntp.yml  python.py  root.yml  solution.yml
ansible/post-eks/: playbook.yml  playbook_new.yml  storage-class.yaml  vars.yml
ansible/pre-eks/: playbook.yml  vars.yml
ansible/vagrant/: hosts  site.yml
c++/learncpp/: CMakeLists.txt
c++/learncpp/1/: CMakeLists.txt  main.cpp
c++/learncpp/1.12/: CMakeLists.txt  io.cpp  io.hpp
c++/learncpp/10.3/: CMakeLists.txt  main.cpp
c++/learncpp/10.7/: CMakeLists.txt  main.cpp
c++/learncpp/11.4/: CMakeLists.txt  main.cpp
c++/learncpp/11.x.2/: CMakeLists.txt  main.cpp
c++/learncpp/11.x.3/: CMakeLists.txt  main.cpp
c++/learncpp/12.1/: CMakeLists.txt  main.cpp
c++/learncpp/12.x/: CMakeLists.txt  main.cpp
c++/learncpp/13.x/: CMakeLists.txt  main.cpp
c++/learncpp/14.x/: CMakeLists.txt  main.cpp
c++/learncpp/15.5/: CMakeLists.txt  main.cpp
c++/learncpp/15.7/: CMakeLists.txt  main.cpp
c++/learncpp/15.x/: CMakeLists.txt  main.cpp
c++/learncpp/2.10.3/: CMakeLists.txt  main.cpp
c++/learncpp/2.10.4/: CMakeLists.txt  main.cpp
c++/learncpp/2.3/: CMakeLists.txt
c++/learncpp/2.4/: CMakeLists.txt  constants.hpp
c++/learncpp/4.4b/: CMakeLists.txt  main.cpp
c++/learncpp/4.7.1/: CMakeLists.txt  main.cpp
c++/learncpp/4.7.2/: CMakeLists.txt  main.cpp
c++/learncpp/4.x/: CMakeLists.txt  main.cpp
c++/learncpp/5.11.1/: CMakeLists.txt  constants.hpp  main.cpp
c++/learncpp/5.11.2/: CMakeLists.txt  main.cpp
c++/learncpp/5.3/: CMakeLists.txt  main.cpp
c++/learncpp/5.7/: CMakeLists.txt  main.cpp
c++/learncpp/6.12a/: CMakeLists.txt  main.cpp
c++/learncpp/6.4/: CMakeLists.txt  main.cpp
c++/learncpp/6.9a/: CMakeLists.txt  main.cpp
c++/learncpp/6.x.1/: CMakeLists.txt  main.cpp
c++/learncpp/6.x.2/: CMakeLists.txt  main.cpp
c++/learncpp/6.x.7/: CMakeLists.txt  main.cpp
c++/learncpp/7.11/: CMakeLists.txt  main.cpp
c++/learncpp/7.4a/: CMakeLists.txt  main.cpp
c++/learncpp/7.8/: CMakeLists.txt  main.cpp
c++/learncpp/7.x/: CMakeLists.txt  main.cpp
c++/learncpp/8.13/: CMakeLists.txt  Point3d.cpp  Point3d.hpp  Vector3d.cpp  Vector3d.hpp  main.cpp
c++/learncpp/8.3.2/: CMakeLists.txt  main.cpp
c++/learncpp/8.3.3/: CMakeLists.txt  main.cpp
c++/learncpp/8.5/: CMakeLists.txt  main.cpp
c++/learncpp/8.x.1/: CMakeLists.txt  main.cpp
c++/learncpp/8.x.3/: CMakeLists.txt  main.cpp
c++/learncpp/9.2/: CMakeLists.txt  main.cpp
c++/learncpp/9.5/: CMakeLists.txt  main.cpp
c++/learncpp/9.8/: CMakeLists.txt  main.cpp
c++/learncpp/9.9/: CMakeLists.txt  main.cpp
c++/learncpp/9.x.2/: CMakeLists.txt  main.cpp
c++/learncpp/9.x.3/: CMakeLists.txt  main.cpp
c++/learncpp/9.x.4/: CMakeLists.txt  main.cpp
chef/: databag.rb
chef/la/: server.sh
cm-acceptance-pipeline/: Jenkinsfile  test_spec.rb
cmake-modules/: CMakeLists.txt  doc.tex  frontend.sh
cmake-modules/ada/: CMakeAdaCompiler.cmake.in  CMakeAdaCompilerABI.adb  CMakeAdaInformation.cmake  CMakeDetermineAdaCompiler.cmake  CMakeTestAdaCompiler.cmake
cmake-modules/modules/: FindCERTI.cmake  FindGLEW.cmake  FindGTKGLExt.cmake  FindLevmar.cmake  FindOpGL.cmake  (+8 more)
dirac-notation/: README.md
goss/: Vagrantfile  goss.yaml
human-relationship-dynamics/: README.md  main.cpp  main.h
immutable/: Jenkinsfile
inspec/: .kitchen.yaml  Rakefile  Vagrantfile
jenkins/: vagrant_provision.sh
mesosphere/: Vagrantfile  playbook.yml
packer/: aws-do-redis.json
puppet/: README.md
puppet-4.3/: README.md
python/: Dockerfile  ctdt.py  ctdt_exec.py  docker_snippets.py  params.yaml  test.py
rpm-specs/: README.md  boost.spec  certi.spec  cuda.spec  cuda4.spec  foobarbaz.spec  gcc47.spec  gcc48.spec  hdf5.spec  levmar.spec  libqxt.spec  phonon.spec  pugixml.spec  pvm.spec  python27.spec  qt-creator.spec  qt-ffmpeg.spec  qt-property-browser.spec  qt4.spec  qwt.spec  qwtpolar.spec  ruby-gems.spec  ruby19.spec  subversion.spec  sundials.spec  vl.spec
ruby/: Rakefile  csv_creator.rb  csv_to_yaml_hash.rb  edit_hash_values_in_yaml.rb  extract_hash_from_yaml.rb  json_2_yaml.rb  spec.rb  vault.rb
secure/: README.md  secure.gemspec
sentinel/ss-sentinel/: CMakeLists.txt  sentinel.proto
serverspec/: .rubocop.yml  Rakefile  Vagrantfile  servers.yaml  vagrant.sh
soea/: CMakeLists.txt  README.md  crossover.cpp  fitness.cpp  genetics.hpp  initGenePool.cpp  mutation.cpp  mysqlQuery.cpp  mysqlQuery.hpp  pattern2string.cpp  pattern2string.hpp  randomUInt.cpp  randomUInt.hpp  soea.cpp  submitMatrix.cpp  submitMatrix.hpp  test_soea.cpp  tmtXmlProcess.cpp  tmtXmlProcess.hpp
soea/utilities/: soea.spec  test.xml  testMatrix.xml
tensorflow/: mnist.py
terraform/: outputs.tf  variables.tf
testinfra/: notes.py
vagrant/: vagrant_utilities.rb
zauber-automato/: .rubocop.yml  .travis.yml  Dockerfile  README.md  Rakefile  Vagrantfile  zauber-automato.gemspec
(+660 files in other folders)
