cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_STANDARD 11 CACHE STRING "C++11 Standard" FORCE)

enable_language(CXX)

add_subdirectory(1.12)
add_subdirectory(2.10.3)
add_subdirectory(2.10.4)
add_subdirectory(4.4b)
add_subdirectory(4.7.1)
add_subdirectory(4.7.2)
add_subdirectory(4.x)
add_subdirectory(5.3)
add_subdirectory(5.7)
add_subdirectory(5.11.1)
add_subdirectory(5.11.2)
add_subdirectory(6.4)
add_subdirectory(6.9a)
add_subdirectory(6.12a)
add_subdirectory(6.x.1)
add_subdirectory(6.x.2)
add_subdirectory(6.x.7)
add_subdirectory(7.4a)
add_subdirectory(7.8)
add_subdirectory(7.11)
add_subdirectory(7.x)
add_subdirectory(8.3.2)
add_subdirectory(8.3.3)
add_subdirectory(8.5)
# add_subdirectory(8.13)
add_subdirectory(8.x.1)
add_subdirectory(8.x.3)
add_subdirectory(9.2)
add_subdirectory(9.5)
add_subdirectory(9.8)
add_subdirectory(9.9)
add_subdirectory(9.x.2)
add_subdirectory(9.x.3)
# add_subdirectory(9.x.4)
add_subdirectory(10.3)
add_subdirectory(10.7)
add_subdirectory(11.4)
add_subdirectory(11.x.2)
add_subdirectory(11.x.3)
add_subdirectory(12.1)
add_subdirectory(12.x)
add_subdirectory(13.x)
add_subdirectory(14.x)
